KNL-285 Field change password on profile is not aligned correctly

--- a/kornell-gwt/src/main/webapp/skins/first/css/utils/forms.less
+++ b/kornell-gwt/src/main/webapp/skins/first/css/utils/forms.less
@@ -312,5 +312,11 @@
 		.labelPanel{
 			width: 140px !important;
 		}
+		.fieldPanel {
+			width: 275px;
+			.textField {
+				width: 248px;
+			}
+		}
 	}
 }
